log fixed and get service attr lines done
