# go/model_service_attribute_value.go
@@ -1,0 +1,17 @@
+/*
+ * CorpFees
+ *
+ * API for the Corp Fees central.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package fee_schedule_server
+
+type ServiceAttributeValue struct {
+
+	Id string `json:"id"`
+
+	ValueTitle string `json:"value_title"`
+}
